Archive2/d7/c80d027cc7c90d/output
In file included from main.cpp:1:
In file included from /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/iostream:39:
In file included from /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ostream:38:
In file included from /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/ios:40:
In file included from /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/char_traits.h:39:
In file included from /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/stl_algobase.h:64:
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/stl_pair.h:188:10: error: read-only variable is not assignable
          first = std::forward<_U1>(__p.first);
          ~~~~~ ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/stl_algo.h:4163:12: note: in instantiation of function template specialization 'std::pair<const char, int>::operator=<char, int>' requested here
        *__result = __unary_op(*__first);
                  ^
main.cpp:12:10: note: in instantiation of function template specialization 'std::transform<__gnu_cxx::__normal_iterator<char *, std::vector<char, std::allocator<char> > >, std::_Rb_tree_iterator<std::pair<const char, int> >, (lambda at main.cpp:13:5)>' requested here
    std::transform(std::begin(mykeys), std::end(mykeys), std::begin(myMap),
         ^
1 error generated.
